<resources>
    <string name="app_name">GroceryListManager</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="first_name"> First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reenter_PW">Reenter Password</string>
    <string name="signupTitle">Welcome to Grocery List Manager!</string>
    <string name="signinTitle">Grocery List Manager</string>
    <string name="signInButton">Sign in</string>
    <string name="signUpButton"> Sign Up</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="lists">Lists</string>
</resources>